--- a/Kanadroid/res/menu/main.xml
+++ b/Kanadroid/res/menu/main.xml
@@ -1,9 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
+    <!-- <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_settings"/> -->
+    <item android:id="@+id/action_fullscreen"
+          android:icon="@drawable/ic_action_full_screen"
+          android:title="@string/action_settings" 
+          android:showAsAction="always"/>
+    <item android:id="@+id/action_theme"
+          android:icon="@drawable/ic_action_full_screen"
+          android:title="@string/action_settings" 
+          android:showAsAction="always"/>
 
 </menu>
